// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignMessage render should enable "Sign message" button 1`] = `
<div>
  <v-form
    data-test="signing-message-form"
    id="signing-message-form"
    v-on:submit="bound togglePasswordModal"
  >
    <v-textarea
      data-test="message-textarea"
      label="Message"
      placeholder="This is a message that you are signing to prove that you own the address you say you own."
      v-model="message"
    />
     
    <v-button
      class-name="is-primary is-medium"
      data-test="sign-button"
    >
      Sign message
    </v-button>
     
    <!---->
  </v-form>
   
  <!---->
</div>
`;

exports[`SignMessage render should render the initial state of the component 1`] = `
<div>
  <v-form
    data-test="signing-message-form"
    id="signing-message-form"
    v-on:submit="bound togglePasswordModal"
  >
    <v-textarea
      data-test="message-textarea"
      label="Message"
      placeholder="This is a message that you are signing to prove that you own the address you say you own."
      v-model="message"
    />
     
    <v-button
      class-name="is-primary is-medium"
      data-test="sign-button"
      disabled="true"
    >
      Sign message
    </v-button>
     
    <!---->
  </v-form>
   
  <!---->
</div>
`;

exports[`SignMessage render should show modal window for password confirmation 1`] = `
<div>
  <v-form
    data-test="signing-message-form"
    id="signing-message-form"
    v-on:submit="bound togglePasswordModal"
  >
    <v-textarea
      data-test="message-textarea"
      label="Message"
      placeholder="This is a message that you are signing to prove that you own the address you say you own."
      v-model="message"
    />
     
    <v-button
      class-name="is-primary is-medium"
      data-test="sign-button"
    >
      Sign message
    </v-button>
     
    <!---->
  </v-form>
   
  <password-modal
    v-on:close="bound togglePasswordModal"
    v-on:confirm="bound signMessage"
  >
    <div
      class="field"
    >
      <label
        class="label"
      >
        Message
      </label>
       
      <p>
        message
      </p>
    </div>
  </password-modal>
</div>
`;

exports[`SignMessage render should show signed message 1`] = `
<div>
  <v-form
    data-test="signing-message-form"
    id="signing-message-form"
    v-on:submit="bound togglePasswordModal"
  >
    <v-textarea
      data-test="message-textarea"
      label="Message"
      placeholder="This is a message that you are signing to prove that you own the address you say you own."
      v-model="message"
    />
     
    <v-button
      class-name="is-primary is-medium"
      data-test="sign-button"
      disabled="true"
    >
      Sign message
    </v-button>
     
    <v-textarea
      data-test="signed-message-textarea"
      disabled=""
      label="Signature"
      v-model="getSignedMessage"
    />
  </v-form>
   
  <!---->
</div>
`;
